--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+argon2 = { version = "0.5.3", features = ["std"] }
 axum = { version = "0.8.8", features = ["ws"] }
+futures-util = "0.3.32"
+jsonwebtoken = "10.3.0"
 rand = "0.10.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
